# HackEurope-Fintech

./: .gitignore  00_START_HERE.md  API_DOCUMENTATION.md  BUILD_COMPLETE.md  COMPLETION_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  FINAL_STATUS.md  FRONTEND_MODIFICATIONS.md  IMPLEMENTATION_SUMMARY.md  PROJECT_COMPLETE.md  QUICK_REFERENCE.md  README.md  README_TLRY_IMPLEMENTATION.md  TESTING_GUIDE.md  TRANSFER_BALANCE_INTEGRATION.md  VISUAL_REFERENCE.md  package-lock.json  requirements.txt
HackEurope-Fintech(Main)/: .gitignore  README.md
HackEurope-Fintech(Main)/backend/: requirements.txt
HackEurope-Fintech(Main)/docs/: API_CONTRACT.md  ARCHITECTURE.md  DECISIONS.md  DEMO_SCRIPT.md  TEAM_WORKFLOW.md
HackEurope-Fintech(Main)/frontend/: app.js  index.html
HackEurope-Fintech(Main)/infra/: .env.example
HackEurope-Fintech(Main)/ml/: README.md  forecast_baseline.py  generate_synthetic_history.py
backend/: requirements.txt
backend/app/: main.py  (+3 more)
docs/: API_CONTRACT.md
frontend/: .env.example  ARCHITECTURE.md  CHECKLIST.md  FEATURES.md  INSTALL.md  README.md  SUMMARY.md  app.js  index.html  package-lock.json  package.json  style.css  tailwind.config.js  tailwind.config.ts  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
ingestion/: __init__.py  __main__.py  generate.py  interfaces.py  models.py  pipeline.py  run.py  smoothing.py
legacy/: README.md
legacy/docs-root/: QUICKSTART.md  README_legacy_root.md  REFERENCE.md  RESOURCE_INDEX.md  START_SERVER.sh  pyproject.toml
ml/: README.md
src/: config.py  db.py  ledger.py  logger.py  main.py  models.py
(+106 files in other folders)
